--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
 
         <div>
-
+            <a href="https://paullewis2013.github.io/Portfolio/">Return to Portfolio</a>
         </div>
     </div>
 
